--- a/fe/index.html
+++ b/fe/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-  </head>
 
-  <body>
-    <div id="app"/>
-    <script type="module" src="/src/renderer.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title> BrokeFairy </title>
+</head>
+
+<body style="min-width: fit-content;">
+  <div id="app" style="width: 720px;" />
+  <script type="module" src="/src/renderer.ts"></script>
+</body>
+
 </html>
