--- a/fe/index.html
+++ b/fe/index.html
@@ -6,8 +6,9 @@
   <title> BrokeFairy </title>
 </head>
 
-<body style="min-width: fit-content;">
-  <div id="app" style="width: 720px;" />
+<body style="min-width: 800px;">
+<!-- <body> -->
+  <div id="app"/>
   <script type="module" src="/src/renderer.ts"></script>
 </body>
 
